test/sema/typeck/literal/invalid-char-empty.out
error: invalid char literal.
--> invalid-char-empty.dora:1:10
 | fn f() { ''; }
            ~~
 | 
1 error found.
